mule-sdk/v/1.0/context-information-injection.adoc
= 上下文信息注入

:keywords: mule, sdk, context, inject, event, location

要获取有关正在处理操作或源的上下文的信息，可以将参数添加到操作或源中。这些参数不会出现在UI中，但它们会被SDK注入运行时。

== 组件位置

在执行操作或使用源代码时，您可能希望获得有关组件位置的一些背景信息，主要用于记录目的。为了达到这个目的，你可以定义一个`ComponentLocation`作为参数，并且它会被注入。

以下示例显示了在启动源时如何记录组件位置：

[source, java, linenums]
----

@Alias("listener")
public class HttpListener extends Source<InputStream, HttpRequestAttributes> {

  private static final Logger LOGGER = getLogger(HttpListener.class);

  @Connection
  private ConnectionProvider<HttpServer> serverProvider;

  @Parameter
  private ComponentLocation location;

  @Parameter
  private String path;

  private HttpServer server;

  @Override
  public void onStart(SourceCallback<InputStream, HttpRequestAttributes> sourceCallback) throws MuleException {
    server = serverProvider.connect();
    if (LOGGER.isDebugEnabled()) {
      LOGGER.debug("Starting HTTP Listener %s on path %s", location.getLocation(), path);
    }
    server.listen(path);
  }
// ...
}
----
